tests/files/lexer_tests/should_fail/044.cmdr
// Illegal character in variable name (ascii 11)
myvar = 11;